@@ -16,19 +16,59 @@
 package dev.morling.onebrc;
 
 import java.io.BufferedWriter;
-import java.nio.file.Files;
-import java.nio.file.Path;
+import java.io.File;
+import java.io.FileWriter;
+import java.io.IOException;
+import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.ThreadLocalRandom;
 
-public class CreateMeasurements {
+import org.rschwietzke.CheaperCharBuffer;
+import org.rschwietzke.FastRandom;
 
-    private static final Path MEASUREMENT_FILE = Path.of("./measurements.txt");
+/**
+ * Faster version with some data faking instead of a real Gaussian distribution
+ * Good enough for our purppose I guess.
+ */
+public class CreateMeasurements2 {
 
-    private record WeatherStation(String id, double meanTemperature) {
-        double measurement() {
-            double m = ThreadLocalRandom.current().nextGaussian(meanTemperature, 10);
-            return Math.round(m * 10.0) / 10.0;
+    private static final String FILE = "./measurements2.txt";
+
+    static class WeatherStation {
+        final static char[] NUMBERS = { '0', '1', '2', '3', '4', '5', '6', '7', '8', '9' };
+
+        final String id;
+        final int meanTemperature;
+
+        final char[] firstPart;
+        final FastRandom r = new FastRandom(ThreadLocalRandom.current().nextLong());
+
+        WeatherStation(String id, double meanTemperature) {
+            this.id = id;
+            this.meanTemperature = (int) meanTemperature;
+            // make it directly copyable
+            this.firstPart = (id + ";").toCharArray();
+        }
+
+        /**
+         * We write out data into the buffer to avoid string conversion
+         * We also no longer use double and gaussian, because for our
+         * purpose, the fake numbers here will do it. Less
+         *
+         * @param buffer the buffer to append to
+         */
+        void measurement(final CheaperCharBuffer buffer) {
+            // fake -10.9 to +10.9 variance without double operations and rounding
+            // gives us -10 to +10
+            int m = meanTemperature + (r.nextInt(21) - 10);
+            // gives us a decimal digit 0 to 9 as char
+            char d = NUMBERS[r.nextInt(10)];
+
+            // just append, only one number has to be converted and we can do
+            // better... if we watn
+            buffer.append(firstPart, 0, firstPart.length)
+                    .append(String.valueOf(m)).append('.').append(d)
+                    .append('\n');
         }
     }
 
@@ -74,7 +114,7 @@ public class CreateMeasurements {
         //         )
         // ) TO 'output.csv' (HEADER, DELIMITER ',');
         // @formatter:on
-        List<WeatherStation> stations = List.of(
+        final List<WeatherStation> stations = Arrays.asList(
                 new WeatherStation("Abha", 18.0),
                 new WeatherStation("Abidjan", 26.0),
                 new WeatherStation("Abéché", 29.4),
@@ -489,17 +529,95 @@ public class CreateMeasurements {
                 new WeatherStation("Zanzibar City", 26.0),
                 new WeatherStation("Zürich", 9.3));
 
-        try (BufferedWriter bw = Files.newBufferedWriter(MEASUREMENT_FILE)) {
-            for (int i = 0; i < size; i++) {
-                if (i > 0 && i % 50_000_000 == 0) {
-                    System.out.printf("Wrote %,d measurements in %s ms%n", i, System.currentTimeMillis() - start);
-                }
-                WeatherStation station = stations.get(ThreadLocalRandom.current().nextInt(stations.size()));
-                bw.write(station.id());
-                bw.write(";" + station.measurement());
-                bw.newLine();
+        File file = new File(FILE);
+
+        // break the loop and unroll it manually
+        int strideSize = 50_000_000;
+        int outer = size / strideSize;
+        int remainder = size - (outer * strideSize);
+
+        try (final BufferedWriter bw = new BufferedWriter(new FileWriter(file))) {
+            for (int i = 0; i < outer; i++) {
+                produce(bw, stations, strideSize);
+
+                // we avoid a modulo if here and use the stride size to print and update
+                System.out.println("Wrote %,d measurements in %s ms".formatted((i + 1) * strideSize, System.currentTimeMillis() - start));
             }
+            // there might be a rest
+            produce(bw, stations, remainder);
+
+            // write fully before taking measurements
+            bw.flush();
+            System.out.println("Created file with %,d measurements in %s ms".formatted(size, System.currentTimeMillis() - start));
         }
-        System.out.printf("Created file with %,d measurements in %s ms%n", size, System.currentTimeMillis() - start);
+    }
+
+    private static void produce(BufferedWriter bw, List<WeatherStation> stations, int count) throws IOException {
+        final int stationCount = stations.size();
+        final int rest = count % 8;
+
+        // use a fast ranodm impl without atomics to be able to utilize the cpu better
+        // and avoid sideeffects, FastRandom is very fake random and does not have a state
+        final FastRandom r1 = new FastRandom(ThreadLocalRandom.current().nextLong());
+        final FastRandom r2 = new FastRandom(ThreadLocalRandom.current().nextLong());
+        final FastRandom r3 = new FastRandom(ThreadLocalRandom.current().nextLong());
+        final FastRandom r4 = new FastRandom(ThreadLocalRandom.current().nextLong());
+
+        // write to a fix buffer first, don't create strings ever
+        // reuse buffer
+        final CheaperCharBuffer sb = new CheaperCharBuffer(200);
+
+        // manual loop unroll for less jumps
+        for (int i = 0; i < count; i = i + 8) {
+            {
+                // try to fill teh cpu pipeline as much as possible with
+                // independent operations
+                int s1 = r1.nextInt(stationCount);
+                int s2 = r2.nextInt(stationCount);
+                int s3 = r3.nextInt(stationCount);
+                int s4 = r4.nextInt(stationCount);
+                // get us the ojects one after the other to have the array
+                // in our L1 cache and not push it out with other data
+                var w1 = stations.get(s1);
+                var w2 = stations.get(s2);
+                var w3 = stations.get(s3);
+                var w4 = stations.get(s4);
+                // write our data to our buffer
+                w1.measurement(sb);
+                w2.measurement(sb);
+                w3.measurement(sb);
+                w4.measurement(sb);
+            }
+            {
+                int s1 = r1.nextInt(stationCount);
+                int s2 = r2.nextInt(stationCount);
+                int s3 = r3.nextInt(stationCount);
+                int s4 = r4.nextInt(stationCount);
+                var w1 = stations.get(s1);
+                var w2 = stations.get(s2);
+                var w3 = stations.get(s3);
+                var w4 = stations.get(s4);
+                w1.measurement(sb);
+                w2.measurement(sb);
+                w3.measurement(sb);
+                w4.measurement(sb);
+            }
+            // write the buffer directly, no intermediate string copy
+            bw.write(sb.data_, 0, sb.length_);
+
+            // reuse buffer, reset only, no cleaning
+            sb.clear();
+        }
+
+        // there might be a rest to write
+        for (int i = 0; i < rest; i++) {
+            sb.clear();
+
+            int s = r1.nextInt(stationCount);
+            var w = stations.get(s);
+            w.measurement(sb);
+
+            bw.write(sb.data_, 0, sb.length_);
+        }
     }
 }
